# draftmyvan

./: .gitignore  COMMANDS.md  EXTRACT_TO_REAL_REPO.md  HANDOFF.md  LICENSE  README.md  manifest.schema.json  project.schema.json  pyproject.toml
api/: __init__.py  build_status.py  catalog.py  main.py  projects.py
docs/: FUSION_MCP_BRIDGE.md  FUSION_MCP_OPT_IN_CONFIG.md  codex_handoff_after_fusion_setup_2026-05-29.md  current_status.md  followup_4_galley_runtime_vs_validation_architecture.md  fusion_galley_verification_runbook.md  fusion_panel_payload_contract.md  fusion_verification_result_2026-05-29.md  fusion_verification_result_template.md
examples/: bench_900.json  galley_1000.json  overhead_locker_1200.json  wardrobe_600.json
runtime/: __init__.py  anchors.py  layout_validation.py  load_module.py  module.py  package_report.py  project.py
tests/: test_api_build_status.py  test_api_health.py  test_api_modules.py  test_api_projects.py  test_api_save_layout.py  test_asset_acceptance.py  test_blender_manifest_contract.py  test_candidate_asset.py  test_candidate_review.py  test_candidate_visual_audit.py  test_check_asset_ready.py  test_create_galley_candidate.py  test_fusion_diagnostic_panel_schedule.py  test_fusion_geometry_execution_skeleton.py  test_fusion_geometry_plan.py  test_fusion_local_availability.py  test_fusion_mcp_bridge.py  test_fusion_mcp_opt_in_docs.py  test_fusion_panel_math.py  test_fusion_parameter_map.py  test_fusion_skeleton.py  test_galley_fixture.py  test_handoff_ready.py  test_human_visual_review.py  test_layout_validation.py  (+6 more)
(+80 files in other folders)
