[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "draftmyvan"
version = "0.1.0"
description = "Manufacturing-oriented campervan module contract, runtime consumer, and configurator API."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

# Runtime dependencies.
#   jsonschema  - manifest validation gate (previously installed inline in CI only).
#   fastapi     - configurator HTTP API (api/).
#   uvicorn     - ASGI dev/prod server for the API.
dependencies = [
    "jsonschema>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "httpx>=0.27",   # FastAPI TestClient transport
]

[tool.setuptools.packages.find]
# Only the importable Python packages. tools/ holds run-as-script CLIs and
# tests/ is a namespace package run via `python -m tests.<name>`; neither is
# installed as a library.
include = ["runtime*", "api*"]
